# vomsxrd

./: CMakeLists.txt  LICENSE  README.md  download.html  genversion.sh  index.html  libXrdSecgsiVOMS.html  params.json
cmake/: FindXRootD.cmake  vomsxrdOSDefs.cmake
docs/man/: libXrdSecgsiVOMS.1
download/v0.2.0/: vomsxrd-0.2.0-1.el5.x86_64.rpm  vomsxrd-0.2.0-1.el6.x86_64.rpm  vomsxrd-0.2.0-1.src.rpm
packaging/: makesrpm.sh  maketar.sh  vomsxrd-0.2.0-1.src.rpm  vomsxrd-compat.spec.in  vomsxrd.spec  vomsxrd.spec.in  vomsxrd4.spec.in
src/: CMakeLists.txt  XrdSecgsiVOMS.hh  XrdSecgsiVOMSFun.cc  XrdSecgsiVOMSVers.hh.in  vomsxrd.cmake
